--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "copy-webpack-plugin": "^9.0.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.3",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2",
     "vuex": "^3.6.2",
